--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TVBPKSNR');
+    })(window,document,'script','dataLayer','%VITE_VITE_GOOGLE_TASK_MANAGER_ID%');
   </script>
   <!-- End Google Tag Manager -->
   <body>
